# rust-console-pokemon

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
