[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# figment = { version = "0.10.8", features = ["toml"] }
# rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
rocket = "0.5.0-rc.3"
